Done with static pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Sobre nós</h1>
+
+<p>Esse site é um lugar para vc:
+	<ul>
+		<li>Guardar seus cosméticos e maquiagens</li>
+		<li>Contar para suas amigas o que vc achou deles</li>
+		<li>Descobrir os melhores cosméticos, segundo a opinião da nossa comunidade</li>
+		<li>Criar uma lista de desejos e nós te ajudamos a comprar tudinho</li>
+		<li>Mostrar seus looks e que produtos vc usou</li>
+		<li>Conversar com seus profissionais de beleza: cabeleireiros, maquiadores, manicures</li>
+	</ul>
+</p>
+
+
