--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#help</h1>
-<p>Find me in app/views/pages/help.html.erb</p>
+<h1>O que você está procurando?</h1>
+
+<p>Como criar um set de maquiagem</p>
+
+<p>Como criar um "Meu Look"</p>
+
+<p>Como avaliar um produto</p>
+
+<p>Como avaliar um profissional</p>
+
