--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Uwi</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
 
-<%= yield %>
+<html lang="pt-br">
 
-</body>
+  <head>
+	<title>Beautify <%= @title %></title>
+	<%= csrf_meta_tag %>
+	<!-- Date: 2012-02-27 -->
+  </head>
+
+  <body>
+	
+	<%= yield %>
+	
+  </body>
+
 </html>
